Fix remote driver